--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Kristi&family=Montserrat:wght@100;200;300;400;600;700&family=Playfair+Display:wght@400;800&display=swap");
+
 body {
+  background: url("https://i.imgur.com/DTS7nNR.jpeg");
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,40 +14,70 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1 {
+  font-family: Playfair Display, sans-serif;
+  font-size: 64px;
+}
+h2 {
+  font-family: Playfair Display, sans-serif;
+  font-size: 44px;
+}
+h3 {
+  font-family: Playfair Display, sans-serif;
+  font-size: 34px;
+  font-weight: 700;
+}
+h4,
+h5 {
+  font-family: Playfair Display, sans-serif;
+  font-size: 24px;
+}
+.nav-item:hover {
+  background: rgba(255, 205, 5, 0.829);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 205, 5, 0.637) 0%,
+    rgba(255, 205, 5, 0.63) 100%
+  );
+  border: none;
+  border-radius: 5px;
+}
 /* gradient background */
 .gradient-bg {
-  background: rgb(0, 206, 255);
+  background: rgb(255, 204, 5);
   background: linear-gradient(
     0deg,
-    rgba(0, 206, 255, 0.5494572829131652) 0%,
-    rgba(0, 212, 255, 1) 100%
+    rgba(255, 205, 5, 0.959) 0%,
+    rgba(255, 204, 5, 1) 100%
   );
   border: none;
 }
 /* gradient button */
 .gradient-btn {
-  background: rgb(0, 206, 255);
+  background: rgb(255, 204, 5);
   background: linear-gradient(
     90deg,
-    rgba(0, 206, 255, 0.5494572829131652) 0%,
-    rgba(0, 212, 255, 1) 100%
+    rgba(255, 205, 5, 0.959) 0%,
+    rgba(255, 204, 5, 1) 100%
   );
   border: none;
 }
 /* gradient text */
 .gradient-txt {
-  color: rgb(0, 206, 255);
+  color: rgb(255, 204, 5);
   background: -webkit-linear-gradient(
     90deg,
-    rgba(0, 206, 255, 0.5494572829131652) 0%,
-    rgba(0, 212, 255, 1) 100%
+    rgba(255, 205, 5, 0.959) 0%,
+    rgba(255, 204, 5, 1) 100%
   );
+  background-clip: content-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 /* border radius */
 .radius-card {
-  border-radius: 15px;
+  border-radius: 8px;
 }
 /*card border */
 .border-card {
@@ -60,10 +93,11 @@ code {
 ----------------------- */
 /* banner background */
 .hero-bg {
-  background: url("https://i.ibb.co/rsbNrWy/slider-img01.png");
+  background: url("https://wanderers.qodeinteractive.com/wp-content/uploads/2018/03/coming-soon-background-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
+  height: 80vh;
 }
 /*banner header text  */
 .hero-bg h1 {
@@ -73,9 +107,17 @@ code {
         footer        
 --------------------- */
 /* footer background */
+
 .footer-bg {
-  background: url("https://i.ibb.co/0ZCphDK/footer-bg.png");
+  background: url("https://wanderers.qodeinteractive.com/wp-content/uploads/2018/02/h1-img-3.jpg?id=128");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   width: 100vw;
+}
+.zind {
+  z-index: -55;
+}
+.lind {
+  z-index: 55;
 }
