--- a/src/index.css
+++ b/src/index.css
@@ -17,21 +17,24 @@ code {
 
 h1 {
   font-family: Playfair Display, sans-serif;
-  font-size: 64px;
+  font-size: 65px;
 }
 h2 {
   font-family: Playfair Display, sans-serif;
-  font-size: 44px;
+  font-size: 55px;
 }
 h3 {
   font-family: Playfair Display, sans-serif;
-  font-size: 34px;
+  font-size: 45px;
   font-weight: 700;
 }
-h4,
+h4 {
+  font-family: Playfair Display, sans-serif;
+  font-size: 35px;
+}
 h5 {
   font-family: Playfair Display, sans-serif;
-  font-size: 24px;
+  font-size: 25px;
 }
 .nav-item:hover {
   background: rgba(255, 205, 5, 0.829);
