added read.md and responsive

--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@ h5 {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
-  height: 80vh;
+  height: 600px;
 }
 /*banner header text  */
 .hero-bg h1 {
